Modification et/ou Ajout delements

--- a/about.html
+++ b/about.html
@@ -190,10 +190,10 @@
             <!-- footer -->
             <div class="row text-center p-2 foot about-foot ">
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>©2023 THD Hamana - All Rights Reserved.</p>
+                    <p>©2023 THD Hamana-Portfolio - All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>Email: jallohth9188@gmail.com</p>
+                    <p>Email: hamanankethd9188@gmail.com</p>
                 </div>
             </div>
         </div>
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                     <div class="menus">
-                        <i class="menu fas fa-bars  fs-3 p-4"></i>
+                        <i class="menu fas fa-bars fs-3 p-4"></i>
                     </div>
                 </div>
                 <div class="col-lg-6 ms-4">
