--- a/galerie.html
+++ b/galerie.html
@@ -178,122 +178,123 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/2.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/5.jpg"></a>
+                                    <a href="img/gallary/1.JPG"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/1.JPG" alt=""></a>
+                                    <a href="img/gallary/2.JPG"></a>
+                                    <a href="img/gallary/3.JPG"></a>
+                                    <a href="img/gallary/4.JPG"></a>
+                                    <a href="img/gallary/5.JPG"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/3.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
+                                    <a href="img/gallary/1.png"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/1.png" alt=""></a>
+                                    <a href="img/gallary/2.png"></a>
+                                    <a href="img/gallary/3.png"></a>
+                                    <a href="img/gallary/4.png"></a>
+                                    <a href="img/gallary/5.png"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="gellary-wraper">
+                                <div class="gallery">
+                                    <a href="img/gallary/6.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/6.jpg" alt=""></a>
                                     <a href="img/gallary/7.jpg"></a>
                                     <a href="img/gallary/8.jpg"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="gellary-wraper">
-                                <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/4.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/11.jpg"></a>
-                                    <a href="img/gallary/12.jpg"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="gellary-wraper">
-                                <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/5.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/1.jpg"></a>
-                                    <a href="img/gallary/14.jpeg"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="gellary-wraper">
-                                <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/2.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/14.jpeg"></a>
-                                    <a href="img/gallary/15.jpeg"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="gellary-wraper">
-                                <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/2.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/7.jpg"></a>
                                     <a href="img/gallary/9.jpg"></a>
+                                    <a href="img/gallary/10.jpg"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/3.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/6.jpg"></a>
-                                    <a href="img/gallary/8.jpg"></a>
+                                    <a href="img/gallary/6.png"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/6.png" alt=""></a>
+                                    <a href="img/gallary/7.png"></a>
+                                    <a href="img/gallary/8.png"></a>
+                                    <a href="img/gallary/9.png"></a>
+                                    <a href="img/gallary/10.png"></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/4.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/1.jpg"></a>
+                                    <a href="img/gallary/11.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/11.jpg" alt=""></a>
+                                    <a href="img/gallary/12.jpg"></a>
+                                    <a href="img/gallary/13.jpg"></a>
+                                    <a href="img/gallary/14.jpg"></a>
+                                    <a href="img/gallary/15.jpg"></a>
+                                    <a href="img/gallary/16.jpg"></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 d-md-none d-lg-block d-sm-block col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/5.jpg" alt=""></a>
-                                    <a href="img/gallary/2.jpg"></a>
-                                    <a href="img/gallary/3.jpg"></a>
-                                    <a href="img/gallary/4.jpg"></a>
-                                    <a href="img/gallary/14.jpeg"></a>
-                                    <a href="img/gallary/11.jpg"></a>
+                                    <a href="img/gallary/11.png"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/11.png" alt=""></a>
+                                    <a href="img/gallary/12.png"></a>
+                                    <a href="img/gallary/13.png"></a>
+                                    <a href="img/gallary/14.png"></a>
+                                    <a href="img/gallary/15.png"></a>
+                                    <a href="img/gallary/16.png"></a>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="gellary-wraper">
+                                <div class="gallery">
+                                    <a href="img/gallary/17.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/17.jpg" alt=""></a>
+                                    <a href="img/gallary/18.jpg"></a>
+                                    <a href="img/gallary/19.jpg"></a>
+                                    <a href="img/gallary/20.jpg"></a>
+                                    <a href="img/gallary/21.jpg"></a>
+                                    <a href="img/gallary/22.jpg"></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="gellary-wraper">
+                                <div class="gallery">
+                                    <a href="img/gallary/17.png"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/17.png" alt=""></a>
+                                    <a href="img/gallary/18.png"></a>
+                                    <a href="img/gallary/19.png"></a>
+                                    <a href="img/gallary/20.png"></a>
+                                    <a href="img/gallary/21.png"></a>
+                                    <a href="img/gallary/22.png"></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="gellary-wraper">
+                                <div class="gallery">
+                                    <a href="img/gallary/23.png"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/23.png" alt=""></a>
+                                    <a href="img/gallary/24.png"></a>
+                                    <a href="img/gallary/25.png"></a>
+                                    <a href="img/gallary/26.png"></a>
+                                    <a href="img/gallary/27.png"></a>
+                                    <a href="img/gallary/28.png"></a>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <!-- gellary-area-end -->
-
                 </div>
             </div>
 
             <!-- footer -->
             <div class="row text-center p-2 foot about-foot ">
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>©2023 THD Hamana - All Rights Reserved.</p>
+                    <p>©2023 THD Hamana-Portfolio - All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>Email: jallohth9188@gmail.com</p>
+                    <p>Email: hamanankethd9188@gmail.com</p>
                 </div>
             </div>
         </div>
@@ -329,10 +330,10 @@
     <script src="js/bootstrap.bundle.min.js"></script>
 
     <!-- galerie js -->
-    <script src="/js/jquery-3.6.3.min.js"></script>
-    <script src="/js/jquery.magnific-popup.min.js"></script>
-    <script src="/js/jquery.scrollUp.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/jquery-3.6.3.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.scrollUp.min.js"></script>
+    <script src="js/main.js"></script>
 
 
     <script>
