--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <h1>Découvrez mon incroyable <br> espace d'art !</h1>
                 </div>
                 <p class="fs-5">
-                    &lt;<i>Code</i>&gt;<span id="codeContent"></span> &lt;<i>Code</i>&gt;
+                    &lt;<i class="text-primary">Code</i>&gt;<span id="codeContent"></span> &lt;<i class="text-primary">Code</i>&gt;
                 </p>
                 <div>
                     <a href="#" class="btn btn-warning py-2">Explorez maintenant !!</a>
@@ -229,10 +229,10 @@
             </div>
             <div class="row text-center p-2 foot">
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>©2023 THD Hamana - All Rights Reserved.</p>
+                    <p>©2023 THD Hamana-Portfolio - All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12">
-                    <p>Email: jallohth9188@gmail.com</p>
+                    <p>Email: hamanankethd9188@gmail.com</p>
                 </div>
 
             </div>
