--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     &lt;<i class="text-primary">Code</i>&gt;<span id="codeContent"></span> &lt;<i class="text-primary">Code</i>&gt;
                 </p>
                 <div>
-                    <a href="#" class="btn btn-warning py-2">Explorez maintenant !!</a>
+                    <a href="#expID" class="btn btn-warning py-2">Explorez maintenant !!</a>
                 </div>
             </div>
             <div class="pub mt-4">
@@ -193,7 +193,7 @@
                     <p>Projets en cours</p>
                 </div>
             </div>
-            <h4 class="mes m-3">Mes competances</h4>
+            <h4 id="expID" class="mes m-3">Mes competances</h4>
             <div class="competances">
                 <div class="competance p-3 ">
                     <h6 class="text-white">Developpement web</h6>
