--- a/galerie.html
+++ b/galerie.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamana</title>
+    <title>THD-Hamana</title> 
+
+    <link rel="shortcut icon" href="img/thd.png" type="image/x-icon">
     <!-- CSS here -->
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
