--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                             </div>
                     
                             <div class="form-floating mt-3">
-                                <textarea class="form-control" name="message" id="userMessage" placeholder="Votre message" ></textarea>
+                                <textarea class="form-control msg" name="message" id="userMessage" placeholder="Votre message" ></textarea>
                                 <label for="userMessage">Votre message</label>
                             </div>
                     
@@ -214,8 +214,8 @@
 
                         <div class="border-top py-3">
                             <h5><strong>Working hours</strong></h5>
-                            <i class="fad fa-hourglass-2 me-2"></i>
-                            <span>Monday – Saturday : &nbsp;08AM – 22PM</span>
+                            <i class="fa-regular fa-hourglass-half"></i>
+                            <span>Monday – Saturday : &nbsp;10AM – 22PM</span>
                         </div>
                     </div>
 
