--- a/index.html
+++ b/index.html
@@ -199,32 +199,32 @@
                 <div class="competance p-3 ">
                     <h6 class="text-white">Developpement web</h6>
                     <p>Je conçois des applications et des sites web de tous genres avec les Technologies HTML & CSS, JS & VUEJS, PHP & LARAVEL & LIVEWIRE, PYTHON & DJANGO.</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div class="competance p-3">
                     <h6 class="text-white">UI/UX Design</h6>
                     <p>Je conçois des designs et des maquettes des applications web, desktop et mobile à la demande avec HTML & CSS, Bootstrap, Tailwind, Adobe XD, Figma.</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div class="competance p-3">
                     <h6 class="text-white">Développement Desktop</h6>
                     <p>Je code aussi des applications desktop c'est à dire des applications pour ordinateur avec les dernières technologies comme C#, Visual basic, Java et Windev.</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div class="competance p-3">
                     <h6 class="text-white">Application mobile</h6>
                     <p>Je conçois aussi des applications mobiles avec leurs backoffice sur firebase, laravel ou django avec le framework flutter ou avec windev mobile.</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div class="competance p-3">
                     <h6 class="text-white">Graphisme</h6>
                     <p>Pour mettre les entreprises en valeurs, je sais aussi concevoir des logos, des cartes d'affaires, des flyers, des dépliants,..., mais aussi faire des montages vidéos avec Adobe Photoshop, Illustrator, Première Pro et filmora.</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div class="competance p-3">
                     <h6 class="text-white">IT Essentials</h6>
                     <p>J'ai aussi des notions en maintenance matérielles et logicielles : dépannages soft, installation & réinstallations, installation de logiciels, installation et configuration de réseau, installation des caméras de surveillances, configuration VOIP, installation et configuration d'imprimantes...</p>
-                    <a href="#" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
+                    <a href="commande.html" class="commander text-warning">COMMANDER MANITENANT<i class="fa-solid fa-chevron-right ms-2"></i></a>
                 </div>
                 <div></div>
             </div>
