Modification de la page galerie

--- a/galerie.html
+++ b/galerie.html
@@ -180,9 +180,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="gellary-wraper">
                                 <div class="gallery">
-                                    <a href="img/gallary/1.JPG"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/1.JPG" alt=""></a>
-                                    <a href="img/gallary/2.JPG"></a>
-                                    <a href="img/gallary/3.JPG"></a>
+                                    <a href="img/gallary/1.jpg"><i class="fa-solid fa-eye"></i><img class="img-fluid" src="img/gallary/1.jpg" alt=""></a>
                                     <a href="img/gallary/4.JPG"></a>
                                     <a href="img/gallary/5.JPG"></a>
                                 </div>
